examples/type_system/failing/34_generic_effect_propagation_missing.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/34_generic_effect_propagation_missing.flx
// error[E400]: Missing Ambient Effect
//
// Call to `apply` requires effect `Console` in this function signature.
//
//   examples/type_system/failing/34_generic_effect_propagation_missing.flx:33:5
//    |
// 33 |     apply(io_inc, 1)
//    |     ^^^^^
//    |     ----- effectful call occurs here
//
// Hint:
//   Add `with Console` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// E400: generic higher-order wrapper should propagate callback IO effect.

fn apply<T>(f: ((T) -> T with |e), x: T) -> T with |e {
    f(x)
}

fn io_inc(x: Int) -> Int with IO {
    print("io_inc=#{to_string(x)}")
    x + 1
}

fn run() -> Int with Time {
    apply(io_inc, 1)
}
